@@ -98,6 +98,13 @@
                                     <param name="visible" value="true" />
                                     <param name="plot_height" value="95" />
                                 </include>
+                                <control type="image">
+                                    <texture colordiffuse="main_fg_100">$INFO[ListItem.Studio,resource://resource.images.studios.white/,.png]</texture>
+                                    <height>150</height>
+                                    <width>260</width>
+                                    <aspectratio aligny="center" align="center">keep</aspectratio>
+                                    <right>0</right>
+                                </control>
                             </control>
                         </control>
                     </control>
