@@ -2,6 +2,7 @@
 Fixes for plot overlay in extended info actor
 Update rottentomatoes to fit new RT brand identity
 Touchup tmdb icon
+Add studio logo to videoinfo
 
 [B]0.9.12[/B]
 LEIA - Fix for scrollbars
